fix: separator line not always in the center and overlapped by parent diff backgrounds

--- a/packages/next/src/views/Version/Default/index.scss
+++ b/packages/next/src/views/Version/Default/index.scss
@@ -99,6 +99,7 @@
         width: 1px;
         background-color: var(--theme-elevation-100);
         transform: translateX(-50%); // Center the line
+        z-index: 2;
       }
     }
 
